# pamqp

./: .checkignore  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: deploy.yaml  docs.yaml  testing.yaml
api/base/: index.html
api/body/: index.html
api/commands/: index.html
api/common/: index.html
api/decode/: index.html
api/encode/: index.html
api/exceptions/: index.html
api/frame/: index.html
api/header/: index.html
api/heartbeat/: index.html
changelog/: index.html
codegen/: extensions.xml  include.py
docs/: Makefile  base.rst  body.rst  changelog.md  changelog.rst  codec_decode.rst  codec_encode.rst  commands.rst  common.rst  conf.py  decode.rst  encode.rst  exceptions.rst  frame.rst  header.rst  heartbeat.rst  history.rst  index.md  index.rst  requirements.txt  specification.rst
docs/_static/css/: custom.css
docs/api/: base.md  body.md  commands.md  common.md  decode.md  encode.md  exceptions.md  frame.md  header.md  heartbeat.md
pamqp/: __init__.py  base.py  body.py  commands.py  common.py  constants.py  decode.py  encode.py  exceptions.py  frame.py  header.py  heartbeat.py  specification.py  types.py
pamqp/codec/: __init__.py  decode.py  decode3.py  encode.py  encode3.py
search/: search_index.json
tests/: decoding_tests.py  encode_decode_tests.py  encoding_tests.py  frame_demarshaling_tests.py  frame_demarshalling_tests.py  frame_marshaling_tests.py  frame_marshalling_tests.py  frame_unmarshaling_tests.py  specification_tests.py  test_command_argument_errors.py  test_commands.py  test_decoding.py  test_encode_decode.py  test_encoding.py  test_frame_marshaling.py  test_frame_unmarshaling.py  test_frame_unmarshaling_errors.py  test_specification.py  test_support.py  test_tag_uri_scheme.py
tools/: codegen.py
