[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pamqp"
version = "3.3.0"
description = "RabbitMQ Focused AMQP low-level library"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Gavin M. Roy", email = "gavinmroy@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = ["amqp", "rabbitmq"]

[project.urls]
Homepage = "https://github.com/gmr/pamqp"
Documentation = "https://pamqp.readthedocs.io"
"Bug Tracker" = "https://github.com/gmr/pamqp/issues"

[project.optional-dependencies]
codegen = [
    "lxml",
    "requests",
    "yapf",
]

[dependency-groups]
dev = [
    "basedpyright",
    "build",
    "coverage[toml]",
    "mypy",
    "pre-commit",
    "ruff",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]",
]

[tool.coverage.run]
branch = true
command_line = "-m unittest discover tests --buffer --verbose"
data_file = "build/.coverage"
source = ["pamqp"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "typing.TYPE_CHECKING",
]

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.hatch.build.targets.wheel]
include = ["pamqp"]

[tool.basedpyright]
typeCheckingMode = "standard"
exclude = ["pamqp/commands.py", "tools/**"]

[tool.mypy]
strict = true
exclude = ["pamqp/commands\\.py$", "tools/"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
exclude = ["pamqp/commands.py"]

[tool.ruff.lint]
select = [
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "N",        # pep8-naming
    "Q",        # flake8-quotes
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "DTZ",      # flake8-datetimez
    "FURB",     # refurb
    "RUF",      # ruff-specific
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
ignore = [
    "E501",     # line too long (generated code has long lines)
    "N818",     # exception class names not required to end in Error
    "RSE",      # contradicts Python Style Guide
    "UP040",    # allow non-PEP695 type alias syntax
]
flake8-quotes = {inline-quotes = "single"}

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["DTZ011"]
"pamqp/commands.py" = ["B028", "RUF023", "S105", "UP045"]
"pamqp/constants.py" = ["S105"]
"tests/**/*.py" = ["DTZ001", "S", "UP031"]
"tools/**/*.py" = ["B019", "B020", "C403", "C901", "S", "T20", "UP031"]
